# adVAE

./: .gitignore  LICENSE  README.md  environment.yaml  main.py  pyproject.toml
Design Documents/: Datasets.md
adVAE/: config.py
adVAE/data_preprocessing/: gene_exp_preprocess.py  gene_exp_preprocessing.py  misc_utils.py
adVAE/data_preprocessing/mri/: dataset.py  (+1 more)
adVAE/metrics/: evaluation_metrics.py  loss_function.py  performance.py  vae_loss.py
adVAE/models/: gene_expression_vae.py  model_classes.py  mri_vae.py  vae.py
adVAE/training/: evaluate_gene_expression.py  evaluate_mri.py  evaluate_synthetic_gene_expression.py  evaluate_synthetic_mri.py  generate_synthetic_gene_expression.py  generate_synthetic_mri.py  train_gene_expression.py  train_mri.py
adVAE/utils/: data_loader.py  generator.py  utils.py
adVAE/visualization/: plot_results.py  plot_utils.py  plots.py  visualize_gene_expression.py  visualize_mri.py
data/AMP_AD_MSBB_MSSM/: manifest.csv
data/processed/: gene_expression.pt
documents/: Datasets.md  adVAE_DDS.drawio  adVAE_model_architecture.drawio  adVAE_modules.drawio
results/: example_mri.pt
results/example_gene_expression/: synthetic_gene_expression.tsv  vae_weights.pth
results/gene_expression/: synthetic_gene_expression.tsv
tests/: test_dataloader.py  test_datasets.py  test_evaluate.py  test_generator.py  test_metrics.py  test_models.py  test_preprocess.py  test_training.py  test_vae.py  test_visualization.py
training/: train.py
tutorials/: example_data_tutorial.ipynb  example_dataset_tutorial.ipynb  real_dataset_tutorial.ipynb
(+82 files in other folders)
